fix off-center cards in profile page sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -304,6 +304,8 @@ table {
 }
 
 .resources {
+  display: flex;
+  justify-content: center;
   background-color: lightslategray;
   width: 15%;
   padding: 5% 0%;
